RAP-93 Do not use Stream.toList() for the mutable list